--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </span>
     </h1>
 
-    <h4 class="ml16">Software Developer</h4>
+    <h4 class="ml16">Software Engineer</h4>
 
     <div class="more-button" onclick="scrollProjects()">
       <p>Check out my work!</p>
